--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Alpacado Software
 email: alpacado@alpacado.com
 description: > # this means to ignore newlines until "baseurl:"
-  Main site for Alpacado Software Solution development, including redirects and blogs
+  [BTC] 1DV91NtsCZCY7LqttxGGUoL7XoYkGwYNLh
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.alpacado.com" # the base hostname & protocol for your site
 twitter_username: qqwillyk
